deploy/k8s-minikube/svph-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: svph-api
  name: svph-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svph-api
  strategy: { }
  template:
    metadata:
      labels:
        app: svph-api
    spec:
      containers:
        - args:
            - bash
            - -c
            - alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000
          image: crisalidesr/svp-harvester:v0.1-dev
          imagePullPolicy: Always
          name: svph-web
          ports:
            - containerPort: 8000
          resources: { }
      restartPolicy: Always
