deploy/k8s-minikube/svph-api-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svph-api-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svph-api
            port:
              number: 8000
